--- a/appview/pages/templates/notifications/fragments/item.html
+++ b/appview/pages/templates/notifications/fragments/item.html
@@ -8,7 +8,10 @@
         ">
       {{ template "notificationIcon" . }}
       <div class="flex-1 w-full flex flex-col gap-1">
-        <span>{{ template "notificationHeader" . }}</span>
+        <div class="flex items-center gap-1">
+          <span>{{ template "notificationHeader" . }}</span>
+          <span class="text-sm text-gray-500 dark:text-gray-400 before:content-['·'] before:select-none">{{ template "repo/fragments/shortTime" .Created }}</span>
+        </div>
         <span class="text-sm text-gray-500 dark:text-gray-400">{{ template "notificationSummary" . }}</span>
       </div>
 
