appview/pages: more sensible handle input field
`autocapitalize` and `autocorrect` will prevent mobile browsers from
autocorrecting the user handle

Signed-off-by: Seongmin Lee <git@boltless.me>

--- a/appview/pages/templates/repo/settings/access.html
+++ b/appview/pages/templates/repo/settings/access.html
@@ -83,6 +83,8 @@
   </label>
   <p class="text-sm text-gray-500 dark:text-gray-400">Collaborators can push to this repository.</p>
   <input
+    autocapitalize="none"
+    autocorrect="off"
     type="text"
     id="add-collaborator"
     name="collaborator"
