--- a/appview/pages/templates/spindles/fragments/addMemberModal.html
+++ b/appview/pages/templates/spindles/fragments/addMemberModal.html
@@ -30,6 +30,8 @@
   </label>
   <p class="text-sm text-gray-500 dark:text-gray-400">Members can register repositories and run workflows on this spindle.</p>
   <input
+    autocapitalize="none"
+    autocorrect="off"
     type="text"
     id="member-did-{{ .Id }}"
     name="member"
