--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -29,6 +29,9 @@
                     <div class="flex flex-col">
                         <label for="handle">handle</label>
                         <input
+                            autocapitalize="none"
+                            autocorrect="off"
+                            autocomplete="username"
                             type="text"
                             id="handle"
                             name="handle"
