--- a/appview/pages/templates/repo/issues/fragments/issueCommentHeader.html
+++ b/appview/pages/templates/repo/issues/fragments/issueCommentHeader.html
@@ -34,7 +34,7 @@
 
 {{ define "editIssueComment" }}
   <a
-    class="text-gray-500 dark:text-gray-400 flex gap-1 items-center group"
+    class="text-gray-500 dark:text-gray-400 flex gap-1 items-center group cursor-pointer"
     hx-get="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.IssueId }}/comment/{{ .Comment.Id }}/edit"
     hx-swap="outerHTML"
     hx-target="#comment-body-{{.Comment.Id}}">
@@ -44,7 +44,7 @@
 
 {{ define "deleteIssueComment" }}
   <a
-    class="text-gray-500 dark:text-gray-400 flex gap-1 items-center group"
+    class="text-gray-500 dark:text-gray-400 flex gap-1 items-center group cursor-pointer"
     hx-delete="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.IssueId }}/comment/{{ .Comment.Id }}/"
     hx-confirm="Are you sure you want to delete your comment?"
     hx-swap="outerHTML"
