appview: add `issue_reopen` event
both issue close and reopen are handled by `NewIssueState` handler.
this works because passed `issue` obj is already holding the newest
issue state.

Signed-off-by: Seongmin Lee <git@boltless.me>

--- a/appview/pages/templates/notifications/fragments/item.html
+++ b/appview/pages/templates/notifications/fragments/item.html
@@ -40,6 +40,8 @@
     commented on an issue
   {{ else if eq .Type "issue_closed" }}
     closed an issue
+  {{ else if eq .Type "issue_reopen" }}
+    reopened an issue
   {{ else if eq .Type "pull_created" }}
     created a pull request
   {{ else if eq .Type "pull_commented" }}
