appview: add `pull_reopen` event
Signed-off-by: Seongmin Lee <git@boltless.me>

--- a/appview/pages/templates/notifications/fragments/item.html
+++ b/appview/pages/templates/notifications/fragments/item.html
@@ -50,6 +50,8 @@
     merged a pull request
   {{ else if eq .Type "pull_closed" }}
     closed a pull request
+  {{ else if eq .Type "pull_reopen" }}
+    reopened a pull request
   {{ else if eq .Type "followed" }}
     followed you
   {{ else }}
