--- a/appview/pages/templates/strings/string.html
+++ b/appview/pages/templates/strings/string.html
@@ -47,7 +47,7 @@
     </span>
   </section>
   <section class="bg-white dark:bg-gray-800 px-6 py-4 rounded relative w-full dark:text-white">
-    <div class="flex justify-between items-center text-gray-500 dark:text-gray-400 text-sm md:text-base pb-2 mb-3 text-base border-b border-gray-200 dark:border-gray-700">
+    <div class="flex flex-col md:flex-row md:justify-between md:items-center text-gray-500 dark:text-gray-400 text-sm md:text-base pb-2 mb-3 text-base border-b border-gray-200 dark:border-gray-700">
       <span>
         {{ .String.Filename }}
         <span class="select-none px-1 md:px-2 [&:before]:content-['·']"></span>
