appview/pages: show live updating counters for steps
spindles can now give us detailed logs for start and end of steps. the
appview can ingest these logs to indicate live durations for steps. it
is implemented like so:

- the logs handler keeps track of start and end times for each step
- whenever we recieve a start or end time, we update the html to add a
  `data-start` or `data-end` attribute
- using some javascript, we print a live updating timer for each step:
  * if only `data-start` is present: then use Now - Start and update
    each second
  * if both `data-start` and `data-end` are present, then use End -
    Start

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/pipelines/workflow.html
+++ b/appview/pages/templates/repo/pipelines/workflow.html
@@ -15,6 +15,7 @@
     {{ block "logs" . }} {{ end }}
   </div>
 </section>
+{{ template "fragments/workflow-timers" }}
 {{ end }}
 
 {{ define "sidebar" }}
