--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -27,9 +27,9 @@
         {{ $messageParts := splitN $commit.Message "\n\n" 2 }}
         <div class="{{ $grid }} py-3">
           <div class="align-top truncate col-span-2">
-              {{ $didOrHandle := index $.EmailToDidOrHandle $commit.Author.Email }}
-              {{ if $didOrHandle }}
-                  {{ template "user/fragments/picHandleLink" $didOrHandle }}
+              {{ $did := index $.EmailToDid $commit.Author.Email }}
+              {{ if $did }}
+                  {{ template "user/fragments/picHandleLink" $did }}
               {{ else }}
                   <a href="mailto:{{ $commit.Author.Email }}" class="text-gray-700 dark:text-gray-300 no-underline hover:underline">{{ $commit.Author.Name }}</a>
               {{ end }}
@@ -153,10 +153,10 @@
                     </span>
                     <span class="mx-2 before:content-['·'] before:select-none"></span>
                     <span>
-                        {{ $didOrHandle := index $.EmailToDidOrHandle $commit.Author.Email }}
-                        <a href="{{ if $didOrHandle }}/{{ $didOrHandle }}{{ else }}mailto:{{ $commit.Author.Email }}{{ end }}"
+                        {{ $did := index $.EmailToDid $commit.Author.Email }}
+                        <a href="{{ if $did }}/{{ $did }}{{ else }}mailto:{{ $commit.Author.Email }}{{ end }}"
                            class="text-gray-500 dark:text-gray-400 no-underline hover:underline">
-                           {{ if $didOrHandle }}{{ template "user/fragments/picHandleLink" $didOrHandle }}{{ else }}{{ $commit.Author.Name }}{{ end }}
+                           {{ if $did }}{{ template "user/fragments/picHandleLink" $did }}{{ else }}{{ $commit.Author.Name }}{{ end }}
                         </a>
                     </span>
                     <div class="inline-block px-1 select-none after:content-['·']"></div>
